# rust-serverless

./: Cargo.toml  README.md
src/: api.rs  events.rs  executor.rs  lib.rs  main.rs  registry.rs  rejections.rs  storage.rs
tests/: api_tests.rs
