[package]
name = "rust-serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.133"
warp = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
wasmtime = "27.0.0"

[lib]
name = "serverless_rust"
path = "src/lib.rs"